--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
