--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -26,6 +28,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "express-handlebars": "^6.0.2",
     "nodemon": "^2.0.15"
   },
   "engines": {
