--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-handlebars": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
