--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
