--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
